--- a/src/main/resources/help/help_1.html
+++ b/src/main/resources/help/help_1.html
@@ -31,9 +31,9 @@
     <div class="help_menu">
       <ul>
         <li><a><b>Электронная подпись</b></a></li>
-        <li><a>Проверка электронной подписи</a></li>
-        <li><a>Обратная связь</a></li>
-        <li><a>Инструкции по работе с платформой</a></li>
+        <li><a class="anti_tekst"  href="help_2.html">Проверка электронной подписи</a></li>
+        <li><a class="anti_tekst"  href="help_3.html">Обратная связь</a></li>
+        <li><a class="anti_tekst"  href="help_4.html">Инструкции по работе с платформой</a></li>
       </ul>
     </div>
 
