--- a/src/main/resources/lichnui_kobinetu/lk_uch/lk3_uch.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/lk3_uch.html
@@ -40,8 +40,8 @@
 
             <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#"><p class="lk_mal">Личные данные</p></li>
-                    <li class="breadcrumb-item"><a href="#"><p class="org_sobr">Организация собраний</p></a></li>
+                    <li class="breadcrumb-item"><a href="../lk_uch/lk_uch.html"><p class="lk_mal">Личные данные</p></li>
+                    <li class="breadcrumb-item"><a href="../lk_uch/lk2_uch.html"><p class="org_sobr">Организация собраний</p></a></li>
                     <li class="breadcrumb-item active" aria-current="page"><p class="chern_zaiav_big">Черновики заявок</p></a></li>
                 </ol>
             </nav>
