--- a/src/main/resources/help/help_3.html
+++ b/src/main/resources/help/help_3.html
@@ -30,10 +30,10 @@
 
     <div class="help_menu">
       <ul>
-        <li><a>Электронная подпись</a></li>
-        <li><a>Проверка электронной подписи</a></li>
+        <li><a class="anti_tekst"  href="help_1.html"  >Электронная подпись</a></li>
+        <li><a class="anti_tekst"  href="help_2.html" >Проверка электронной подписи</a></li>
         <li><a><b>Обратная связь</b></a></li>
-        <li><a>Инструкции по работе с платформой</a></li>
+        <li><a class="anti_tekst"  href="help_4.html" >Инструкции по работе с платформой</a></li>
       </ul>
     </div>
 
