--- a/src/main/resources/help/help_4.html
+++ b/src/main/resources/help/help_4.html
@@ -30,9 +30,9 @@
 
         <div class="help_menu">
             <ul>
-                <li><a>Электронная подпись</a></li>
-                <li><a>Проверка электронной подписи</a></li>
-                <li><a>Обратная связь</a></li>
+                <li><a class="anti_tekst"  href="help_1.html" >Электронная подпись</a></li>
+                <li><a class="anti_tekst"  href="help_2.html" >Проверка электронной подписи</a></li>
+                <li><a class="anti_tekst"  href="help_3.html" >Обратная связь</a></li>
                 <li><a><b>Инструкции по работе с платформой</b></a></li>
             </ul>
         </div>
