--- a/src/main/resources/lichnui_kobinetu/lk_org/lk2_org.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/lk2_org.html
@@ -40,9 +40,9 @@
 
             <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#"><p class="lk_mal">Личные данные</p></li>
+                    <li class="breadcrumb-item"><a href="../lk_org/lk_org.html"><p class="lk_mal">Личные данные</p></li>
                     <li class="breadcrumb-item active" aria-current="page"><p class="org_sobr_big">Организация собраний</p></a></li>
-                    <li class="breadcrumb-item"><a href="#"><p class="chern_zaiav">Черновики заявок</p></a></li>
+                    <li class="breadcrumb-item"><a href="../lk_org/lk3_org.html"><p class="chern_zaiav">Черновики заявок</p></a></li>
                 </ol>
             </nav>
 
