--- a/src/main/resources/lichnui_kobinetu/lk_org/lk_org.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/lk_org.html
@@ -40,8 +40,8 @@
             <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item active" aria-current="page"><p class="ld">Личные данные</p></li>
-                    <li class="breadcrumb-item"><a href="#"><p class="org_sobr">Организация собраний</p></a></li>
-                    <li class="breadcrumb-item"><a href="#"><p class="chern_zaiav">Черновики заявок</p></a></li>
+                    <li class="breadcrumb-item"><a href="../lk_org/lk2_org.html"><p class="org_sobr">Организация собраний</p></a></li>
+                    <li class="breadcrumb-item"><a href="../lk_org/lk3_org.html"><p class="chern_zaiav">Черновики заявок</p></a></li>
                 </ol>
             </nav>
 
