--- a/src/main/resources/z_sobr_uch_3.html
+++ b/src/main/resources/z_sobr_uch_3.html
@@ -43,8 +43,21 @@
             <p>Перечень вопросов</p>
             <ul>
                 <li><input type="text" placeholder="Текст вопроса №1" class="oneline"/></li>
-                <li><button class="more">Подробнее</button></li>
+                <li><button class="more more1">Подробнее</button></li>
             </ul>
+            <table class="vote vote1">
+                <tr class="bord">
+                    <td>За</td>
+                    <td>Против</td>
+                    <td>Воздержался</td>
+                </tr>
+                <tr>
+                    <td class="nobord"><input type="checkbox"></td>
+                    <td class="nobord"><input type="checkbox"></td>
+                    <td class="nobord"><input type="checkbox"></td>
+                    <td class="bn"><button class="vote_btn">Голосовать</button></td>
+                </tr>
+            </table>
             <ul>
                 <li><input type="text" placeholder="Текст вопроса №2" class="oneline"/></li>
                 <li><button class="more">Подробнее</button></li>
@@ -75,5 +88,23 @@
 <script src="../jquery/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function(){
+        $(".vote1").hide()
+    });
+    $(document).ready(function(){
+        $(".more1").click(function(){
+            $(".vote1").slideDown()
+        }).click(function(){
+            $(".ep").animate({
+                height: "+=152px"
+            });
+        }).click(function(){
+            $(".base + .base_bg").animate({
+                marginTop: "+=152px"
+            });
+        });
+    });
+</script>
 </body>
 </html>
