--- a/src/main/resources/lichnui_kobinetu/lk_org/lk2_org.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/lk2_org.html
@@ -14,10 +14,10 @@
 <div class="menu">
     <ul>
         <li class="logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-        <li class="nav_item"><a href="../main.html">Главная</a></li>
+        <li class="nav_item"><a href="/main.html">Главная</a></li>
         <li class="nav_item"><a>Реестр собраний</a></li>
-        <li class="nav_item"><a href="../help/help_1.html">Помощь</a></li>
-        <li class="nav_item"><a href="../help/contacts.html">Контакты</a></li>
+        <li class="nav_item"><a href="/help/help_1.html">Помощь</a></li>
+        <li class="nav_item"><a href="/help/contacts.html">Контакты</a></li>
         <li class="nav_item"><button class="nav_btn">Войти</button></li>
         <li class="nav_item"><a>Зарегистрироваться</a></li>
     </ul>
