--- a/src/main/resources/lichnui_kobinetu/lk_org/lk_org_zaiav.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/lk_org_zaiav.html
@@ -38,11 +38,11 @@
     <p class="obshie_dan">Общие данные о собрании</p>
         <div class="data_vrem">
             <label for="data_vrem" class="txt_obsh">Дата и время собрания</label>
-            <input type="email" class="forms4" id="data_vrem" placeholder="01.01.0000">
+            <input type="email" class="forms5" id="data_vrem" placeholder="01.01.0000">
         </div>
         <div class="time">
             <label for="time" class="txt_obsh"></label>
-            <input type="email" class="forms4" id="time" placeholder="00:00">
+            <input type="email" class="forms6" id="time" placeholder="00:00">
         </div>
         <div class="povestka_dnia">
             <label for="povestka_dnia" class="txt_obsh">Повестка дня</label>
@@ -53,43 +53,43 @@
 
         <div class="data_vrem2">
             <label for="data_vrem2" class="txt_obsh">Начало предоставления заявок на участие*</label>
-            <input type="email" class="forms4" id="data_vrem2" placeholder="01.01.0000">
+            <input type="email" class="forms5" id="data_vrem2" placeholder="01.01.0000">
         </div>
     <div class="time2">
         <label for="time2" class="txt_obsh"></label>
-        <input type="email" class="forms4" id="time2" placeholder="00:00">
+        <input type="email" class="forms6" id="time2" placeholder="00:00">
     </div>
         <div class="data_vrem3">
             <label for="data_vrem3" class="txt_obsh">Окончание предоставления заявок на участие*</label>
-            <input type="email" class="forms4" id="data_vrem3" placeholder="01.01.0000">
+            <input type="email" class="forms5" id="data_vrem3" placeholder="01.01.0000">
         </div>
     <div class="time3">
         <label for="time3" class="txt_obsh"></label>
-        <input type="email" class="forms4" id="time3" placeholder="00:00">
+        <input type="email" class="forms6" id="time3" placeholder="00:00">
     </div>
         <div class="data_vrem4">
             <label for="data_vrem4" class="txt_obsh">Начало приема бюллетеней*</label>
-            <input type="email" class="forms4" id="data_vrem4" placeholder="01.01.0000">
+            <input type="email" class="forms5" id="data_vrem4" placeholder="01.01.0000">
         </div>
     <div class="time4">
         <label for="time4" class="txt_obsh"></label>
-        <input type="email" class="forms4" id="time4" placeholder="00:00">
+        <input type="email" class="forms6" id="time4" placeholder="00:00">
     </div>
         <div class="data_vrem5">
             <label for="data_vrem5" class="txt_obsh">Окончание приема бюллетеней*</label>
-            <input type="email" class="forms4" id="data_vrem5" placeholder="01.01.0000">
+            <input type="email" class="forms5" id="data_vrem5" placeholder="01.01.0000">
         </div>
     <div class="time5">
         <label for="time5" class="txt_obsh"></label>
-        <input type="email" class="forms4" id="time5" placeholder="00:00">
+        <input type="email" class="forms6" id="time5" placeholder="00:00">
     </div>
         <div class="data_vrem6">
             <label for="data_vrem6" class="txt_obsh">Дата подписания протокола собрания*</label>
-            <input type="email" class="forms4" id="data_vrem6" placeholder="01.01.0000">
+            <input type="email" class="forms5" id="data_vrem6" placeholder="01.01.0000">
         </div>
     <div class="time6">
         <label for="time6" class="txt_obsh"></label>
-        <input type="email" class="forms4" id="time6" placeholder="00:00">
+        <input type="email" class="forms6" id="time6" placeholder="00:00">
     </div>
         <div class="obem_sobr">
             <label for="obem_sobr" class="txt_obsh">Объем собрания</label>
@@ -99,81 +99,81 @@
     <p class="dan_org_sobr">Данные организатора собрания</p>
 
         <div class="unn">
-            <label for="unn" class="txt_obsh">Фамилия*</label>
-            <input type="email" class="forms4" id="unn" placeholder="Иванова">
+            <label for="unn" class="txt_obsh">ИНН*</label>
+            <input type="email" class="forms" id="unn" placeholder="11111111">
         </div>
         <div class="ogrn">
-            <label for="ogrn" class="txt_obsh">Фамилия*</label>
-            <input type="email" class="forms4" id="ogrn" placeholder="Иванова">
+            <label for="ogrn" class="txt_obsh">ОГРН*</label>
+            <input type="email" class="forms" id="ogrn" placeholder="000 000 000 00">
         </div>
         <div class="naim_org">
-            <label for="naim_org" class="txt_obsh">Фамилия*</label>
-            <input type="email" class="forms4" id="naim_org" placeholder="Иванова">
+            <label for="naim_org" class="txt_obsh">Наименование организации*</label>
+            <input type="email" class="forms2" id="naim_org" placeholder="Полное наименование">
         </div>
         <div class="qr_adres">
-            <label for="qr_adres" class="txt_obsh">Фамилия*</label>
-            <input type="email" class="forms4" id="qr_adres" placeholder="Иванова">
+            <label for="qr_adres" class="txt_obsh">Юридический адрес*</label>
+            <input type="email" class="forms2" id="qr_adres" placeholder="Юридический адрес">
         </div>
         <div class="pocht_adres">
-            <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-            <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+            <label for="pocht_adres" class="txt_obsh">Почтовый адрес*</label>
+            <input type="email" class="forms2" id="pocht_adres" placeholder="Почтовый адрес">
         </div>
     <p class="efrsb_txt">Информация для интеграции с ЕФРСБ</p>
     <div class="efrsb">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="efrsb" class="txt_obsh">Идентификационный номер сообщения о публикации торгов на сайте ЕФРСБ*</label>
+        <input type="email" class="forms2" id="efrsb" placeholder="Идентификационный номер">
     </div>
     <div class="data_razm">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="data_razm" class="txt_obsh">Дата размещения сообщения о публикации торгов на сайте ЕФРСБ*</label>
+        <input type="email" class="forms2" id="data_razm" placeholder="01.01.0000">
     </div>
     <div class="telefon">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="telefon" class="txt_obsh">Телефон*</label>
+        <input type="email" class="forms4" id="telefon" placeholder="+7 (900) 000-12-34">
     </div>
     <div class="email">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="email" class="txt_obsh">Электронная почта*</label>
+        <input type="email" class="forms4" id="email" placeholder="ivanova12@mail.ru">
     </div>
     <div class="naim_abr_sud">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="naim_abr_sud" class="txt_obsh">Наименование арбитражного суда*</label>
+        <input type="email" class="forms4" id="naim_abr_sud" placeholder="Наименование арбитражного суда">
     </div>
     <div class="nomer_dela">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="nomer_dela" class="txt_obsh">Номер дела о банкротстве*</label>
+        <input type="email" class="forms4" id="nomer_dela" placeholder="Номер дела о банкротстве">
     </div>
     <div class="osn_dlia_sobr">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="osn_dlia_sobr" class="txt_obsh">Основание для собрания кредиторов</label>
+        <input type="email" class="forms4" id="osn_dlia_sobr" placeholder="Основание для собрания кредиторов">
     </div>
     <div class="tip_dolzh">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="tip_dolzh" class="txt_obsh">Тип должника</label>
+        <input type="email" class="forms4" id="tip_dolzh" placeholder="Юридическое лицо">
     </div>
     <div class="unn2">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="unn2" class="txt_obsh">ИНН</label>
+        <input type="email" class="forms4" id="unn2" placeholder="11111111">
     </div>
     <div class="ogrn2">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="ogrn2" class="txt_obsh">ОГРН</label>
+        <input type="email" class="forms4" id="ogrn2" placeholder="000 000 000 00">
     </div>
     <div class="naim_dolzh">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="naim_dolzh" class="txt_obsh">Наименование должника</label>
+        <input type="email" class="forms2" id="naim_dolzh" placeholder="Полное наименование">
     </div>
     <div class="ud_lich">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="ud_lich" class="txt_obsh"></label>
+        <input type="email" class="forms2" id="ud_lich" placeholder="Документ, удостоверяющий личность">
     </div>
     <div class="ud_ruk">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+        <label for="ud_ruk" class="txt_obsh"></label>
+        <input type="email" class="forms2" id="ud_ruk" placeholder="Документы, подтверждающие полномочия руководителя или иного лица на осуществление действий от имени заявителя">
     </div>
-    <div class="nomer_dela">
-        <label for="pocht_adres" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="pocht_adres" placeholder="Иванова">
+    <div class=".">
+        <label for="nomer_dela" class="txt_obsh">Фамилия*</label>
+        <input type="email" class="forms4" id="nomer_dela" placeholder="Иванова">
     </div>
 
 
