--- a/src/main/resources/lichnui_kobinetu/lk_oper/lk2_oper.html
+++ b/src/main/resources/lichnui_kobinetu/lk_oper/lk2_oper.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../../style/lk.css">
-    <link rel="stylesheet" type="text/css" href="../../style/lk3.css">
+    <link rel="stylesheet" type="text/css" href="../../style/lk_oper.css">
     <link rel="stylesheet" type="text/css" href="../../style/shared.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -14,10 +13,10 @@
 <div class="menu">
     <ul>
         <li class="logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-        <li class="nav_item"><a href="/main.html">Главная</a></li>
+        <li class="nav_item"><a href="../main.html">Главная</a></li>
         <li class="nav_item"><a>Реестр собраний</a></li>
-        <li class="nav_item"><a href="/help/help_1.html">Помощь</a></li>
-        <li class="nav_item"><a href="/help/contacts.html">Контакты</a></li>
+        <li class="nav_item"><a href="../help/help_1.html">Помощь</a></li>
+        <li class="nav_item"><a href="../help/contacts.html">Контакты</a></li>
         <li class="nav_item"><button class="nav_btn">Войти</button></li>
         <li class="nav_item"><a>Зарегистрироваться</a></li>
     </ul>
@@ -29,55 +28,25 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Главная</a></li>
-            <li class="breadcrumb-item"> Личный кабинет организатора </li>
+            <li class="breadcrumb-item">Личный кабинет участника </li>
         </ol>
     </nav>
 </div>
 
-                    <p class="txt_lk">Личный кабинет </p>
+                    <p class="lk">Личный кабинет </p>
 
-        <form class="table_lk">
+<form class="table_oper">
 
-            <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="../lk_org/lk_org.html"><p class="lk_mal">Личные данные</p></li>
-                    <li class="breadcrumb-item"><a href="../lk_org/lk2_org.html"><p class="org_sobr">Организация собраний</p></a></li>
-                    <li class="breadcrumb-item active" aria-current="page"><p class="chern_zaiav_big">Черновики заявок</p></a></li>
-                </ol>
-            </nav>
-
-            <img class="logout-1-traced"
-                 src="https://static.overlay-tech.com/assets/3373d3e0-dfbb-4718-9044-d75c865a7c23.svg"/>
-            <p class="login">Светлана И.</p>
-            <div class="poloska"></div>
-
-        </form>
-
-<form class="table_min">
-
-    <p class="chern_za">Черновики заявок</p>
+     <p class="oper">Оператор ЭТП</p>
+    <div class="linia"></div>
+    <p class="ld">Личные данные</p>
+    <p class="spisok_org">Список заявок организаторов</p>
+    <p class="spisok_uch">Список заявок участников</p>
+    <p class="spisok_sobr">Список собраний</p>
+    <p class="logs">Журнал изменений</p>
 
 </form>
-
-        <form class="table_blue1">
-            <p class="del">Удалить</p>
-            <p class="red">Редактировать</p>
-            <p class="org">Организатор</p>
-            <p class="prav">ООО «Право-Торг» </p>
-            <p class="dolzh">Должник</p>
-            <p class="kent">Бальдяева Юлия Александровна</p>
-
-        </form>
-
-        <form class="table_blue2">
-            <p class="del">Удалить</p>
-            <p class="red">Редактировать</p>
-            <p class="org">Организатор</p>
-            <p class="prav">ООО «Право-Торг» </p>
-            <p class="dolzh">Должник</p>
-            <p class="kent">Бальдяева Юлия Александровна</p>
-
-        </form>
+        
 
         <div class="container">
                 <div class="content">
