--- a/src/main/resources/main.html
+++ b/src/main/resources/main.html
@@ -17,8 +17,8 @@
         <li class="nav_item"><a>Реестр собраний</a></li>
         <li class="nav_item"><a href="help/help_1.html">Помощь</a></li>
         <li class="nav_item"><a href="help/contacts.html">Контакты</a></li>
-        <li class="nav_item"><button class="nav_btn">Войти</button></li>
-        <li class="nav_item"><a>Зарегистрироваться</a></li>
+        <li class="nav_item"><a href="login.html"> <button class="nav_btn">Войти</button></a></li>
+        <li class="nav_item"><a href="signin.html">Зарегистрироваться</a></li>
     </ul>
 </div>
 
