--- a/src/main/resources/main.html
+++ b/src/main/resources/main.html
@@ -236,8 +236,7 @@
             </div>
         </div>
 
-        <div class="b">
-            <div class="base_bg"></div>
+        <div class="base_bg">
             <div class="base">
                 <ul>
                     <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
@@ -289,13 +288,6 @@
     });
     $(document).ready(function () {
         $(".stats_btn").click(function () {
-            $(".base").animate({
-                top: "2333px"
-            });
-        });
-    });
-    $(document).ready(function () {
-        $(".stats_btn").click(function () {
             $(".base_bg").animate({
                 top: "2333px"
             });
@@ -325,13 +317,6 @@
         $(".cross").click(function () {
             $(".sort_drop").animate({
                 top: "986px"
-            });
-        });
-    });
-    $(document).ready(function () {
-        $(".cross").click(function () {
-            $(".base").animate({
-                top: "1748px"
             });
         });
     });
