--- a/src/main/resources/z_sobr_uch_3.html
+++ b/src/main/resources/z_sobr_uch_3.html
@@ -42,10 +42,9 @@
         <div class="ep">
             <p>Перечень вопросов</p>
             <ul>
-                <li><input type="text" placeholder="Текст вопроса №1" class="oneline"/></li>
-                <li><button class="more more1">Подробнее</button></li>
+                <li>Текст вопроса №1</li>
             </ul>
-            <table class="vote vote1">
+            <table class="vote">
                 <tr class="bord">
                     <td>За</td>
                     <td>Против</td>
@@ -59,52 +58,58 @@
                 </tr>
             </table>
             <ul>
-                <li><input type="text" placeholder="Текст вопроса №2" class="oneline"/></li>
-                <li><button class="more">Подробнее</button></li>
+                <li>Текст вопроса №2</li>
             </ul>
+            <table class="vote">
+                <tr class="bord">
+                    <td>За</td>
+                    <td>Против</td>
+                    <td>Воздержался</td>
+                </tr>
+                <tr>
+                    <td class="nobord"><input type="checkbox"></td>
+                    <td class="nobord"><input type="checkbox"></td>
+                    <td class="nobord"><input type="checkbox"></td>
+                    <td class="bn"><button class="vote_btn">Голосовать</button></td>
+                </tr>
+            </table>
             <ul>
-                <li><input type="text" placeholder="Текст вопроса №3" class="oneline"/></li>
-                <li><button class="more">Подробнее</button></li>
+                <li>Текст вопроса №3</li>
             </ul>
+            <table class="vote">
+                <tr class="bord">
+                    <td>За</td>
+                    <td>Против</td>
+                    <td>Воздержался</td>
+                </tr>
+                <tr>
+                    <td class="nobord"><input type="checkbox"></td>
+                    <td class="nobord"><input type="checkbox"></td>
+                    <td class="nobord"><input type="checkbox"></td>
+                    <td class="bn"><button class="vote_btn">Голосовать</button></td>
+                </tr>
+            </table>
         </div>
 
-        <div class="base_bg"></div>
-
-        <div class="base">
-            <ul>
-                <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-                <li class="base_item1"><a>Выйти</a></li>
-            </ul>
-            <ul class="base_links">
-                <li class="base_item2">Главная</li>
-                <li class="base_item2">Реестр собраний</li>
-                <li class="base_item2">Помощь</li>
-                <li class="base_item2">Контакты</li>
-            </ul>
-            <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
+        <div class="base_bg">
+            <div class="base">
+                <ul>
+                    <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
+                    <li class="base_item1"><a>Выйти</a></li>
+                </ul>
+                <ul class="base_links">
+                    <li class="base_item2">Главная</li>
+                    <li class="base_item2">Реестр собраний</li>
+                    <li class="base_item2">Помощь</li>
+                    <li class="base_item2">Контакты</li>
+                </ul>
+                <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
+            </div>
         </div>
     </div>
 </div>
 <script src="../jquery/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-<script>
-    $(document).ready(function(){
-        $(".vote1").hide()
-    });
-    $(document).ready(function(){
-        $(".more1").click(function(){
-            $(".vote1").slideDown()
-        }).click(function(){
-            $(".ep").animate({
-                height: "+=152px"
-            });
-        }).click(function(){
-            $(".base + .base_bg").animate({
-                marginTop: "+=152px"
-            });
-        });
-    });
-</script>
 </body>
 </html>
