я в душе вомбат ьdfdfdf

--- a/src/main/resources/lichnui_kobinetu/lk_oper/lk3_oper.html
+++ b/src/main/resources/lichnui_kobinetu/lk_oper/lk3_oper.html
@@ -41,8 +41,8 @@
      <p class="oper">Оператор ЭТП</p>
     <div class="linia"></div>
     <p class="ld">Личные данные</p>
-    <p class="spisok_org"><b>Список заявок организаторов</b></p>
-    <p class="spisok_uch">Список заявок участников</p>
+    <p class="spisok_org">Список заявок организаторов</p>
+    <p class="spisok_uch"><b>Список заявок участников</b></p>
     <p class="spisok_sobr">Список собраний</p>
     <p class="logs">Журнал изменений</p>
 
