--- a/src/main/resources/lichnui_kobinetu/lk_oper/lk4_oper.html
+++ b/src/main/resources/lichnui_kobinetu/lk_oper/lk4_oper.html
@@ -41,9 +41,9 @@
      <p class="oper">Оператор ЭТП</p>
     <div class="linia"></div>
     <p class="ld">Личные данные</p>
-    <p class="spisok_org"><b>Список заявок организаторов</b></p>
+    <p class="spisok_org">Список заявок организаторов</p>
     <p class="spisok_uch">Список заявок участников</p>
-    <p class="spisok_sobr">Список собраний</p>
+    <p class="spisok_sobr"><b>Список собраний</b></p>
     <p class="logs">Журнал изменений</p>
 
 </form>
@@ -84,33 +84,65 @@
     <div class="table_min">
 
         <div class="table_item">
-            <p class="nomer_z">№ заявки</p>
-            <p class="kreditor">Кредитор</p>
-            <p class="nik">Афанасьева Елена Евгеньевна</p>
-            <p class="data_and_time">Дата и время</p>
-            <p class="data">29.04.2022 14:00</p>
-            <p class="status">Статус</p>
-            <p class="na_rasmotr">На рассмотрении</p>
-            <button type="button" class="knopka_prin">Принять</button>
-            <button type="button" class="knopka_otklon">Отклонить</button>
+            <p class="nomer_z">1013 Очное</p>
+            <p class="kreditor">Организатор</p>
+            <p class="nik">ООО «Право-Торг»</p>
+            <p class="dolzhnik">Должник</p>
+            <p class="nik2">Бальдяева Юлия Александровна</p>
+            <p class="status2">Статус</p>
+            <p class="status_ob">Отменено организатором</p>
+            <lu class="palka1"></lu>
+            <p class="data_provid">Дата проведения собрания</p>
+            <p class="sama_data">29.04.2022 14:00</p>
+            <p class="data_priema">Даты приема заявок</p>
+            <p class="sama_data2">14.04.2022 - 28.04.2022 </p>
+
         </div>
         <div class="table_item">
-            <p class="nomer_z">№ заявки</p>
-            <p class="kreditor">Кредитор</p>
-            <p class="nik">Афанасьева Елена Евгеньевна</p>
-            <p class="data_and_time">Дата и время</p>
-            <p class="data">29.04.2022 14:00</p>
-            <p class="status">Статус</p>
-            <p class="na_rasmotr">Допущена</p>
+            <p class="nomer_z">1014 Очное</p>
+            <p class="kreditor">Организатор</p>
+            <p class="nik">ООО «Право-Торг»</p>
+            <p class="dolzhnik">Должник</p>
+            <p class="nik2">Бальдяева Юлия Александровна</p>
+            <p class="status2">Статус</p>
+            <p class="status_ob">Отменено организатором</p>
+            <lu class="palka1"></lu>
+            <p class="data_provid">Дата проведения собрания</p>
+            <p class="sama_data">29.04.2022 14:00</p>
+            <p class="data_priema">Даты приема заявок</p>
+            <p class="sama_data2">14.04.2022 - 28.04.2022 </p>
+
         </div>
         <div class="table_item">
-            <p class="nomer_z">№ заявки</p>
-            <p class="kreditor">Кредитор</p>
-            <p class="nik">Афанасьева Елена Евгеньевна</p>
-            <p class="data_and_time">Дата и время</p>
-            <p class="data">29.04.2022 14:00</p>
-            <p class="status">Статус</p>
-            <p class="na_rasmotr">Отклонена</p>
+            <p class="nomer_z">1015 Очное</p>
+            <p class="kreditor">Организатор</p>
+            <p class="nik">ООО «Право-Торг»</p>
+            <p class="dolzhnik">Должник</p>
+            <p class="nik2">Бальдяева Юлия Александровна</p>
+            <p class="status2">Статус</p>
+            <p class="status_ob">Отменено организатором</p>
+            <lu class="palka1"></lu>
+            <p class="data_provid">Дата проведения собрания</p>
+            <p class="sama_data">29.04.2022 14:00</p>
+            <p class="data_priema">Даты приема заявок</p>
+            <p class="sama_data2">14.04.2022 - 28.04.2022 </p>
+
+        </div>
+
+        <div class="table_item">
+            <p class="nomer_z">1017 Очное</p>
+            <p class="kreditor">Организатор</p>
+            <p class="nik">ООО «Право-Торг»</p>
+            <p class="dolzhnik">Должник</p>
+            <p class="nik2">Бальдяева Юлия Александровна</p>
+            <p class="status2">Статус</p>
+            <p class="status_ob">Отменено организатором</p>
+            <lu class="palka1"></lu>
+            <p class="data_provid">Дата проведения собрания</p>
+            <p class="sama_data">29.04.2022 14:00</p>
+            <p class="data_priema">Даты приема заявок</p>
+            <p class="sama_data2">14.04.2022 - 28.04.2022 </p>
+
         </div>
 
     </div>
