--- a/src/main/resources/z_sobr_uch_5.html
+++ b/src/main/resources/z_sobr_uch_5.html
@@ -44,7 +44,7 @@
       </ul>
     </div>
 
-    <p class="sort">Сортировать по <b class="sort_val">номеру</b><img src="/img/down_arrow.svg" class="arrw"/></p>
+    <p class="sort">Сортировать по <b class="sort_val">дате добавления</b><img src="/img/down_arrow.svg" class="arrw"/></p>
     <ul class="sort_drop">
       <li class="sort1">на рассмотрении</li>
       <li class="sort2">дате добавления</li>
@@ -120,5 +120,63 @@
 <script src="../jquery/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<script>
+  $(document).ready(function () {
+    $(".sort_drop").hide()
+  })
+  $(document).ready(function(){
+    $(".arrw").click(function(){
+      $(".sort_drop").slideDown()
+    }).click(function(){
+      $(".table").animate({
+        opacity: "0.3"
+      });
+    }).click(function(){
+      $(".arrw").css("transform", "rotate(180deg)")
+    });
+  });
+  $(document).ready(function(){
+    $(".sort_drop").mouseleave(function(){
+      $(".sort_drop").slideUp()
+    }).mouseleave(function(){
+      $(".table").animate({
+        opacity: "1"
+      });
+    }).mouseleave(function(){
+      $(".arrw").css("transform", "rotate(360deg)")
+    });
+  });
+  $(document).ready(function(){
+    $(".sort_drop li").click(function(){
+      $(".sort_drop").slideToggle()
+    }).click(function(){
+      $(".table").animate({
+        opacity: "1"
+      });
+    }).click(function(){
+      $(".arrw").css("transform", "rotate(360deg)")
+    })
+  });
+  $(document).ready(function(){
+    $(".sort1").click(function(){
+      $(".sort_val").text("дате добавления")
+    });
+  });
+  $(document).ready(function(){
+    $(".sort2").click(function(){
+      $(".sort_val").text("на рассмотернии")
+    });
+  });
+  $(document).ready(function(){
+    $(".sort3").click(function(){
+      $(".sort_val").text("допущена")
+    });
+  });
+  $(document).ready(function(){
+    $(".sort4").click(function(){
+      $(".sort_val").text("отклонена")
+    });
+  });
+</script>
 </body>
 </html>
