Вомбаты топ? csuks

--- a/src/main/resources/help/help_4.html
+++ b/src/main/resources/help/help_4.html
@@ -24,8 +24,14 @@
 <div class="container">
     <div class="content">
 
-        <div class="bc"><a href="../main.html">Главная</a>/<a href="help_1.html">Помощь</a></div>
-
+        <div class="ogl">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a class="anti_tekst"  href="/main.html">Главная</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Помощь</li>
+                </ol>
+            </nav>
+        </div>
         <p class="heading">Помощь</p>
 
         <div class="help_menu">
