--- a/src/main/resources/help/contacts.html
+++ b/src/main/resources/help/contacts.html
@@ -24,7 +24,14 @@
 <div class="container">
   <div class="content">
 
-    <div class="bc"><a href="../main.html">Главная</a>/<a href="#">Контакты</a></div>
+    <div class="ogl">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a class="anti_tekst"  href="/main.html">Главная</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Контакты</li>
+        </ol>
+      </nav>
+    </div>
 
     <p class="heading">Контакты</p>
     <p class="recs">ООО «ТендерСтандарт»<br>
