--- a/src/main/resources/z_sobr uch_4.html
+++ b/src/main/resources/z_sobr uch_4.html
@@ -21,10 +21,19 @@
     <li class="nav_item"><a href="../signin.html">Зарегистрироваться</a></li>
   </ul>
 </div>
+
 <div class="container">
   <div class="content">
 
-    <div class="bc"><a href="../main.html">Главная</a>&nbsp;/&nbsp;<a href="">Личный кабинет участника</a>&nbsp;/&nbsp;<a href="">Участие в собраниях</a>&nbsp;/&nbsp;<a href="#">Карточка собрания</a></div>
+    <div class="ogl">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a class="anti_tekst"  href="/main.html">Главная</a></li>
+          <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Личный кабинет участника</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Карточка собрания</li>
+        </ol>
+      </nav>
+    </div>
 
     <p class="heading">Карточка собрания: 1014-заочное</p>
 
