o_sobr_uch 1-7 готовы

--- a/src/main/resources/z_sobr_uch_2.html
+++ b/src/main/resources/z_sobr_uch_2.html
@@ -60,11 +60,11 @@
       </ul>
       <ul class="inline_3 second_3 fader">
         <li>Имя*</li>
-        <li><input type="text" placeholder="Иванова" /></li>
+        <li><input type="text" placeholder="Светлана" /></li>
       </ul>
       <ul class="inline_3 fader">
         <li>Отчество*</li>
-        <li><input type="text" placeholder="Иванова" /></li>
+        <li><input type="text" placeholder="Андреевна" /></li>
       </ul>
       <ul class="inline_3 fader">
         <li>Серия*</li>
