--- a/src/main/resources/lichnui_kobinetu/lk_admin/lk2_admina.html
+++ b/src/main/resources/lichnui_kobinetu/lk_admin/lk2_admina.html
@@ -41,53 +41,20 @@
          src="https://static.overlay-tech.com/assets/3373d3e0-dfbb-4718-9044-d75c865a7c23.svg"/>
     <p class="admin">Администратор</p>
     <div class="palka2"></div>
-    <p class="licd"><b>Личные данные</b></p>
-    <p  class="shabl">Шаблоны документов</p>
+    <p class="licd">Личные данные</p>
+    <p  class="shabl"><b>Шаблоны документов</b></p>
     <p class="sistem_obsh">Системные настройки</p>
 
 </form>
 
-<form class="table_osn">
-    <p class="txt_ld">Личные данные</p>
-    <div class="famil">
-        <label for="nam" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="nam" placeholder="Иванова">
+<form class="table_mal">
+
+<p class="shabl_doks">Шаблоны документов</p>
+    <div class="vubr_shabl">
+        <label for="vubr_shabl" class="txt_obsh">Выберите шаблон</label>
+        <input type="email" class="forms2" id="vubr_shabl" placeholder="не выбрано">
     </div>
-    <div class="name">
-        <label for="nam" class="txt_obsh">Имя*</label>
-        <input type="email" class="forms4" id="nam" placeholder="Иванова">
-    </div>
-    <div class="otch">
-        <label for="nam" class="txt_obsh">Отчество*</label>
-        <input type="email" class="forms4" id="nam" placeholder="Андреевна">
-    </div>
-    <div class="telefon">
-        <label for="nam" class="txt_obsh">Телефон*</label>
-        <input type="email" class="forms4" id="nam" placeholder="+7 (900) 000-12-34">
-    </div>
-    <div class="email">
-        <label for="nam" class="txt_obsh">Электронная почта*</label>
-        <input type="email" class="forms4" id="nam" placeholder="ivanova12@mail.ru">
-    </div>
-    <div class="email2">
-        <label for="nam" class="txt_obsh">Повторите адрес электронной почты*</label>
-        <input type="email" class="forms4" id="nam" placeholder="ivanova12@mail.ru">
-    </div>
-    <p class="txt_log">Логин и смена пароля</p>
-    <div class="login">
-        <label for="nam" class="txt_obsh">Логин</label>
-        <input type="email" class="forms4" id="nam" placeholder="Operator1">
-    </div>
-    <div class="new_pas">
-        <label for="nam" class="txt_obsh">Новый пароль</label>
-        <input type="email" class="forms4" id="nam" placeholder="********">
-    </div>
-    <div class="new_pas2">
-        <label for="nam" class="txt_obsh">Повторите новый пароль</label>
-        <input type="email" class="forms4" id="nam" placeholder="********">
-    </div>
-    <button type="button" class="knopka">Сохранить изменения</button>
-    <button type="button" class="knopka2">Отменить</button>
+
 </form>
 
 
