--- a/src/main/resources/lichnui_kobinetu/lk_admin/test.html
+++ b/src/main/resources/lichnui_kobinetu/lk_admin/test.html
@@ -30,7 +30,7 @@
       padding: 41px;
       width: 100%;
     }
-    .footer {
+    footer {
       box-sizing: border-box;
       padding: 149px;
       width: 100%;
@@ -38,7 +38,7 @@
     .logo {position: absolute;
       width: 186.67px;
       height: 28px;
-      left: 120px;
+      margin-left: 120px;
       margin-top: -60px;
       background: #37DCF5;
     }
@@ -53,14 +53,17 @@
       font-weight: 500;
       font-size: 15px;
       line-height: 100%;
-      /* identical to box height, or 15px */
-
 
       color: #FFFFFF;}
-    .header, .footer {
+    .header {
       background: #008080;
       color: #ffffff;
     }
+
+    footer {
+      background: #008080;
+      color: #ffffff;}
+
     .content p {
       margin: 10px 0;
       font-size: 16px;
@@ -122,11 +125,9 @@
 
 </div>
 
-<div class="content2">
-<div class="footer">
+<footer class="footer">
 <p class="logo">rhz</p>
   <p class="voiti">fdgdfd</p>
- </div>
-</div>
+</footer>
 </body>
 </html>
