--- a/src/main/resources/lichnui_kobinetu/lk_uch/o_sobr/o_sobr_uch_4.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/o_sobr/o_sobr_uch_4.html
@@ -54,8 +54,8 @@
                 <li class="text hed"><b>Протокол собрания</b></li>
             </ul>
             <ul>
-                <li class="svg"><img src="img/doc.svg"/><b><u>Журнал уведомлений участников</u></b></li>
-                <li><img src="img/doc.svg"/><b><u>Протокол собрания</u></b></li>
+                <li class="svg"><img src="../../../img/doc.svg"/><b><u>Журнал уведомлений участников</u></b></li>
+                <li><img src="../../../img/doc.svg"/><b><u>Протокол собрания</u></b></li>
             </ul>
             <ul>
                 <li><button class="down">Скачать журнал</button></li>
