--- a/src/main/resources/lichnui_kobinetu/lk_uch/o_sobr/o_sobr_uch_7.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/o_sobr/o_sobr_uch_7.html
@@ -44,12 +44,12 @@
             <ul>
                 <li>Выберите вопрос</li>
                 <li class="dropd">Кто будет арбитражным управляющим?</li>
-                <img src="img/down_arrow.svg">
+                <img src="../../../img/down_arrow.svg">
             </ul>
             <ul>
                 <li>Показать голосование</li>
                 <li class="dropd">Всех участников</li>
-                <img src="img/down_arrow.svg">
+                <img src="../../../img/down_arrow.svg">
             </ul>
             <div class="tbl">
                 <table>
@@ -60,25 +60,25 @@
                         <th>Воздержался</th>
                     </tr>
                     <tr>
-                        <td class="fio">Афанасьева Елена Евгеньевна <img src="img/download.svg"/></td>
+                        <td class="fio">Афанасьева Елена Евгеньевна <img src="../../../img/download.svg"/></td>
                         <td><input type="checkbox" /></td>
                         <td><input type="checkbox" /></td>
                         <td><input type="checkbox" /></td>
                     </tr>
                     <tr>
-                        <td class="fio">Афанасьева Елена Евгеньевна <img src="img/download.svg"/></td>
+                        <td class="fio">Афанасьева Елена Евгеньевна <img src="../../../img/download.svg"/></td>
                         <td><input type="checkbox" /></td>
                         <td><input type="checkbox" /></td>
                         <td><input type="checkbox" /></td>
                     </tr>
                     <tr>
-                        <td class="fio">Афанасьева Елена Евгеньевна <img src="img/download.svg"/></td>
+                        <td class="fio">Афанасьева Елена Евгеньевна <img src="../../../img/download.svg"/></td>
                         <td><input type="checkbox" /></td>
                         <td><input type="checkbox" /></td>
                         <td><input type="checkbox" /></td>
                     </tr>
                     <tr>
-                        <td class="fio">Афанасьева Елена Евгеньевна <img src="img/download.svg"/></td>
+                        <td class="fio">Афанасьева Елена Евгеньевна <img src="../../../img/download.svg"/></td>
                         <td><input type="checkbox" /></td>
                         <td><input type="checkbox" /></td>
                         <td><input type="checkbox" /></td>
