--- a/src/main/resources/lichnui_kobinetu/lk_uch/o_sobr/o_sobr_uch_8.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/o_sobr/o_sobr_uch_8.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style/shared.css">
-    <link rel="stylesheet" type="text/css" href="style/o_sobr_uch_8.css">
+    <link rel="stylesheet" type="text/css" href="../../../style/shared.css">
+    <link rel="stylesheet" type="text/css" href="../../../style/o_sobr_uch_8.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -13,12 +13,12 @@
 <div class="menu">
     <ul>
         <li class="logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-        <li class="nav_item"><a href="main.html">Главная</a></li>
+        <li class="nav_item"><a href="../../../main.html">Главная</a></li>
         <li class="nav_item"><a>Реестр собраний</a></li>
-        <li class="nav_item"><a href="help/help_1.html">Помощь</a></li>
-        <li class="nav_item"><a href="help/contacts.html">Контакты</a></li>
-        <li class="nav_item"><a href="login.html"> <button class="nav_btn">Войти</button></a></li>
-        <li class="nav_item"><a href="signin.html">Зарегистрироваться</a></li>
+        <li class="nav_item"><a href="../../../help/help_1.html">Помощь</a></li>
+        <li class="nav_item"><a href="../../../help/contacts.html">Контакты</a></li>
+        <li class="nav_item"><a href="../../../login.html"> <button class="nav_btn">Войти</button></a></li>
+        <li class="nav_item"><a href="../../../signin.html">Зарегистрироваться</a></li>
     </ul>
 </div>
 
@@ -130,7 +130,7 @@
         </div>
     </div>
 </div>
-<script src="jquery/jquery-3.6.0.js"></script>
+<script src="../../../jquery/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <script>
