--- a/src/main/resources/lichnui_kobinetu/lk_org/lk_org_zaiav.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/lk_org_zaiav.html
@@ -13,10 +13,10 @@
 <div class="menu">
     <ul>
         <li class="logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-        <li class="nav_item"><a href="../main.html">Главная</a></li>
+        <li class="nav_item"><a href="/main.html">Главная</a></li>
         <li class="nav_item"><a>Реестр собраний</a></li>
-        <li class="nav_item"><a href="../help/help_1.html">Помощь</a></li>
-        <li class="nav_item"><a href="../help/contacts.html">Контакты</a></li>
+        <li class="nav_item"><a href="../../help/help_1.html">Помощь</a></li>
+        <li class="nav_item"><a href="../../help/contacts.html">Контакты</a></li>
         <li class="nav_item"><button class="nav_btn">Войти</button></li>
         <li class="nav_item"><a>Зарегистрироваться</a></li>
     </ul>
@@ -171,13 +171,37 @@
         <label for="ud_ruk" class="txt_obsh"></label>
         <input type="email" class="forms2" id="ud_ruk" placeholder="Документы, подтверждающие полномочия руководителя или иного лица на осуществление действий от имени заявителя">
     </div>
-    <div class=".">
-        <label for="nomer_dela" class="txt_obsh">Фамилия*</label>
-        <input type="email" class="forms4" id="nomer_dela" placeholder="Иванова">
+    <p class="kontaktu">Контактная информация для участников собрания</p>
+    <p class="sved_o_proc">Сведения о процедуре банкротства</p>
+    <p class="dolzhnik">Должник</p>
+    <p class="doks">Документы, которые необходимо предоставить участникам собрания</p>
+<button class="knopka">Добавить документ</button>
+<p class="dop_doks">Дополнительные документы по собранию</p>
+<div class="dop_doks_txt">Перечень документов, которые необходимо приложить к заявке, указан в Регламенте работы сервиса
+    <p></p>
+    Максимальный объём загружаемого файла 15 Мб. Документ должен быть в формате pdf или jpg </div>
+<img class="doks_img" src="/img/add%201%20(Traced).svg">
+<p class="prek_dok">Прикрепить документ</p>
+    <p class="voprosu">Вопросы повестки дня</p>
+    <button class="knopka2">Добавить вопрос</button>
+    <div class="nim_cod">
+        <label for="nim_cod" class="txt_obsh">Введите наименование юрид. лица или ФИО ИП/физ. лица</label>
+        <input type="email" class="forms7" id="nim_cod" placeholder="Наименование юрид. лица или ФИО ИП/физ. лица">
     </div>
+    <button class="knopka3">Добавить</button>
 
-
-
+    <table class="table_fio">
+        <tr>
+            <th class="shirina">Наименование юрид. лица или ФИО ИП/физ. лица</th>
+            <th class="uzko">Email</th>
+        </tr>
+        <tr>
+            <th class="shirina"></th>
+            <th class="uzko"></th>
+        </tr>
+    </table>
+    <button class="knopka4">Подписать заявку электронной подписью</button>
+    <button class="knopka5">Сохранить заявку как черновик</button>
 
 </form>
 
