--- a/src/main/resources/help/help_1.html
+++ b/src/main/resources/help/help_1.html
@@ -71,20 +71,20 @@
        <h6 class="p_4">! Загружая или устанавливая на своем устройстве данную библиотеку, Пользователь соглашается с полным и безоговорочным принятием условий что ЭТП ТендерСтандарт не несёт ответственность за настоящее Соглашение.</h6>
      </div>
 
-    <div class="base_bg"></div>
-
-    <div class="base">
-      <ul>
-        <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-        <li class="base_item1"><a>Выйти</a></li>
-      </ul>
-      <ul class="base_links">
-        <li class="base_item2">Главная</li>
-        <li class="base_item2">Реестр собраний</li>
-        <li class="base_item2">Помощь</li>
-        <li class="base_item2">Контакты</li>
-      </ul>
-      <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
+    <div class="base_bg">
+      <div class="base">
+        <ul>
+          <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
+          <li class="base_item1"><a>Выйти</a></li>
+        </ul>
+        <ul class="base_links">
+          <li class="base_item2">Главная</li>
+          <li class="base_item2">Реестр собраний</li>
+          <li class="base_item2">Помощь</li>
+          <li class="base_item2">Контакты</li>
+        </ul>
+        <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
+      </div>
     </div>
   </div>
 </div>
