--- a/src/main/resources/help/help_3.html
+++ b/src/main/resources/help/help_3.html
@@ -38,7 +38,7 @@
       <ul>
         <li><a class="anti_tekst"  href="help_1.html"  >Электронная подпись</a></li>
         <li><a class="anti_tekst"  href="help_2.html" >Проверка электронной подписи</a></li>
-        <li><a><b>Обратная связь</b></a></li>
+        <li><a class="anti_tekst" href="#"><b>Обратная связь</b></a></li>
         <li><a class="anti_tekst"  href="help_4.html" >Инструкции по работе с платформой</a></li>
       </ul>
     </div>
@@ -78,20 +78,20 @@
 
     <button class="send_btn">Отправить заявку</button>
 
-    <div class="base_bg"></div>
-
-    <div class="base">
-      <ul>
-        <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-        <li class="base_item1"><a>Выйти</a></li>
-      </ul>
-      <ul class="base_links">
-        <li class="base_item2">Главная</li>
-        <li class="base_item2">Реестр собраний</li>
-        <li class="base_item2">Помощь</li>
-        <li class="base_item2">Контакты</li>
-      </ul>
-      <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
+    <div class="base_bg">
+      <div class="base">
+        <ul>
+          <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
+          <li class="base_item1"><a>Выйти</a></li>
+        </ul>
+        <ul class="base_links">
+          <li class="base_item2">Главная</li>
+          <li class="base_item2">Реестр собраний</li>
+          <li class="base_item2">Помощь</li>
+          <li class="base_item2">Контакты</li>
+        </ul>
+        <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
+      </div>
     </div>
   </div>
 </div>
