--- a/src/main/resources/lichnui_kobinetu/lk_admin/test.html
+++ b/src/main/resources/lichnui_kobinetu/lk_admin/test.html
@@ -10,6 +10,7 @@
     }
     html, body {
       height: 100%;
+      width: 100%;
     }
     /*============ Основные стили =============*/
     body {
@@ -17,32 +18,38 @@
       color: #222222;
       font-family: Arial, Helvetica, sans-serif;
     }
+
     .content {
       box-sizing: border-box;
       padding: 20px;
       width: 100%;
     }
+
     .content2 {
       width: 100%;
     }
+
     .header {
       box-sizing: border-box;
       padding: 41px;
       width: 100%;
     }
+
     footer {
       box-sizing: border-box;
       padding: 149px;
       width: 100%;
     }
-    .logo {position: absolute;
+
+    .logo {
       width: 186.67px;
       height: 28px;
       margin-left: 120px;
       margin-top: -60px;
       background: #37DCF5;
     }
-    .voiti {position: absolute;
+
+    .voiti {
       width: 46px;
       height: 15px;
       margin-left: 1234px;
@@ -54,7 +61,9 @@
       font-size: 15px;
       line-height: 100%;
 
-      color: #FFFFFF;}
+      color: #FFFFFF;
+    }
+
     .header {
       background: #008080;
       color: #ffffff;
@@ -62,7 +71,8 @@
 
     footer {
       background: #008080;
-      color: #ffffff;}
+      color: #ffffff;
+    }
 
     .content p {
       margin: 10px 0;
@@ -74,6 +84,7 @@
       display: flex;
       flex-direction: column;
     }
+
     .content {
       flex-grow: 1;
     }
@@ -125,7 +136,7 @@
 </div>
 
 <footer class="footer">
-<p class="logo">rhz</p>
+  <p class="logo">rhz</p>
   <p class="voiti">fdgdfd</p>
 </footer>
 </body>
