--- a/src/main/resources/lichnui_kobinetu/lk_oper/lk2_oper.html
+++ b/src/main/resources/lichnui_kobinetu/lk_oper/lk2_oper.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../../style/lk_oper.css">
-    <link rel="stylesheet" type="text/css" href="../../style/lk2_oper.css">
-    <link rel="stylesheet" type="text/css" href="../../style/shared.css">
+    <link rel="stylesheet" type="text/css" href="/style/shared.css">
+    <link rel="stylesheet" type="text/css" href="/style/lk_oper.css">
+    <link rel="stylesheet" type="text/css" href="/style/lk2_oper.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -14,10 +14,10 @@
 <div class="menu">
     <ul>
         <li class="logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-        <li class="nav_item"><a href="../main.html">Главная</a></li>
+        <li class="nav_item"><a href="/main.html">Главная</a></li>
         <li class="nav_item"><a>Реестр собраний</a></li>
-        <li class="nav_item"><a href="../help/help_1.html">Помощь</a></li>
-        <li class="nav_item"><a href="../help/contacts.html">Контакты</a></li>
+        <li class="nav_item"><a href="/help/help_1.html">Помощь</a></li>
+        <li class="nav_item"><a href="/help/contacts.html">Контакты</a></li>
         <li class="nav_item"><button class="nav_btn">Войти</button></li>
         <li class="nav_item"><a>Зарегистрироваться</a></li>
     </ul>
@@ -48,38 +48,13 @@
 
 </form>
 
-
-        <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-            <h2 class="vupodashka" id="headingOne">
-                <button
-                        class="accordion-button collapsed"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne"
-                        aria-expanded="false"
-                        aria-controls="collapseOne"
-                >
-                    Сортировать по
-                </button>
-            </h2>
-            <div
-                    id="collapseOne"
-                    class="accordion-collapse collapse"
-                    aria-labelledby="headingOne"
-                    data-bs-parent="#accordionExample"
-                    style=""
-            >
-                <div class="vspluvashka_itme">
-                    <li><a class="dropdown-item" href="#">Действие</a></li>
-                    <li><a class="dropdown-item" href="#">Другое действие</a></li>
-                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
-                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
-
-                </div>
-            </div>
-        </div>
-    </div>
+        <p class="sort">Сортировать по <b class="sort_val">дате добавления</b><img src="/img/down_arrow.svg" class="arrw"/></p>
+        <ul class="sort_drop">
+            <li class="sort1">на рассмотрении</li>
+            <li class="sort2">дате добавления</li>
+            <li class="sort3">допущена</li>
+            <li class="sort4">отклонена</li>
+        </ul>
 
     <div class="table_min">
 
@@ -93,6 +68,11 @@
             <p class="na_rasmotr">На рассмотрении</p>
             <button type="button" class="knopka_prin">Принять</button>
             <button type="button" class="knopka_otklon">Отклонить</button>
+        </div>
+        <div class="decline">
+            <p>Подтвердите отклонение заявки и укажите причину ее отмены*</p>
+            <input type="text" placeholder="Укажите причину">
+            <button class="decline_btn">Отклонить заявку</button>
         </div>
         <div class="table_item">
             <p class="nomer_z">№ заявки</p>
@@ -119,24 +99,114 @@
 
         <div class="container">
                 <div class="content">
-                    <div class="base_bglk"></div>
-                    <div class="baselk">
-                        <ul>
-                            <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-                            <li class="base_item1"><a>Выйти</a></li>
-                        </ul>
-                        <ul class="base_links">
-                            <li class="base_item2">Главная</li>
-                            <li class="base_item2">Реестр собраний</li>
-                            <li class="base_item2">Помощь</li>
-                            <li class="base_item2">Контакты</li>
-                        </ul>
-                        <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
+                    <div class="base_bg">
+                        <div class="base">
+                            <ul>
+                                <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
+                                <li class="base_item1"><a>Выйти</a></li>
+                            </ul>
+                            <ul class="base_links">
+                                <li class="base_item2">Главная</li>
+                                <li class="base_item2">Реестр собраний</li>
+                                <li class="base_item2">Помощь</li>
+                                <li class="base_item2">Контакты</li>
+                            </ul>
+                            <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
+                        </div>
                     </div>
                 </div>
             </div>
 
-    <script src="../../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
+    <script src="/jquery/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+        <script>
+            $(document).ready(function () {
+                $(".sort_drop").hide()
+            })
+            $(document).ready(function () {
+                $(".decline").hide()
+            })
+            $(document).ready(function(){
+                $(".arrw").click(function(){
+                    $(".sort_drop").slideDown()
+                }).click(function(){
+                    $(".table_min").animate({
+                        opacity: "0.3"
+                    });
+                }).click(function(){
+                    $(".arrw").css("transform", "rotate(180deg)")
+                });
+            });
+            $(document).ready(function(){
+                $(".sort_drop").mouseleave(function(){
+                    $(".sort_drop").slideUp()
+                }).mouseleave(function(){
+                    $(".table_min").animate({
+                        opacity: "1"
+                    });
+                }).mouseleave(function(){
+                    $(".arrw").css("transform", "rotate(360deg)")
+                });
+            });
+            $(document).ready(function(){
+                $(".sort_drop li").click(function(){
+                    $(".sort_drop").slideToggle()
+                }).click(function(){
+                    $(".table").animate({
+                        opacity: "1"
+                    });
+                }).click(function(){
+                    $(".arrw").css("transform", "rotate(360deg)")
+                })
+            });
+            $(document).ready(function(){
+                $(".sort1").click(function(){
+                    $(".sort_val").text("дате добавления")
+                });
+            });
+            $(document).ready(function(){
+                $(".sort2").click(function(){
+                    $(".sort_val").text("на рассмотернии")
+                });
+            });
+            $(document).ready(function(){
+                $(".sort3").click(function(){
+                    $(".sort_val").text("допущена")
+                });
+            });
+            $(document).ready(function(){
+                $(".sort4").click(function(){
+                    $(".sort_val").text("отклонена")
+                });
+            });
+
+            $(document).ready(function(){
+                $(".knopka_otklon").click(function(){
+                    $(".decline").fadeIn()
+                }).click(function(){
+                    $(".table_item").animate({
+                        opacity: "0.3"
+                    });
+                });
+            });
+            $(document).ready(function(){
+                $(".decline").mouseleave(function(){
+                    $(".decline").fadeOut()
+                }).mouseleave(function(){
+                    $(".table_item").animate({
+                        opacity: "1"
+                    });
+                });
+            });
+            $(document).ready(function() {
+                $(".sort_drop li").click(function () {
+                    $(".decline_btn").fadeOut()
+                }).click(function () {
+                    $(".table_item").animate({
+                        opacity: "1"
+                    });
+                });
+            });
+        </script>
 </body>
 </html>
