--- a/src/main/resources/main.html
+++ b/src/main/resources/main.html
@@ -235,8 +235,7 @@
                 </div>
             </div>
         </div>
-
-        <div class="base_bg">
+        <div class="base_bg"></div>
             <div class="base">
                 <ul>
                     <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
@@ -250,12 +249,11 @@
                 </ul>
                 <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
             </div>
-        </div>
     </div>
 </div>
-    <script src="jquery/jquery-3.6.0.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<script src="jquery/jquery-3.6.0.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <script>
     $(document).ready(function () {
         $(".dropdown").hide()
