Мега пуш v vgb v

--- a/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_1.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_1.html
@@ -34,6 +34,8 @@
     </nav>
 </div>
 
+        <p class="zaiavka">Заявка на проведение очного собрания</p>
+
 
 <form class="table_org">
     <p class="obshie_dan">Общие данные о собрании</p>
