--- a/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_2.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_2.html
@@ -35,7 +35,7 @@
             </nav>
         </div>
 
-        <p class="heading">Карточка собрания: 1014-заочное</p>
+        <p class="heading">Карточка собрания: 1014-очное</p>
 
         <div class="stats">
             <ul>
@@ -116,8 +116,10 @@
             <ul>
                 <li><input type="text" placeholder="Документы, подтверждающие полномочия руководителя или иного лица на осуществление действий от имени заявителя" class="oneline"/></li>
             </ul>
-            <button class="knopka4">Редактировать собрание</button>
-            <button class="knopka5">Отменить собрание</button>
+            <button class="knopka6">Отменить собрание</button>
+            <button class="knopka7">Редактировать собрание</button>
+            <button class="knopka8">Начать собрание</button>
+
         </div>
 
         <div class="base_bg">
