--- a/src/main/resources/lichnui_kobinetu/lk_org/z_sobr/z_sobr_org_1.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/z_sobr/z_sobr_org_1.html
@@ -34,6 +34,7 @@
     </nav>
 </div>
 
+        <p class="zaiavka">Заявка на проведение заочного собрания</p>
 
 <form class="table_org">
     <p class="obshie_dan">Общие данные о собрании</p>
@@ -92,10 +93,7 @@
         <label for="time6" class="txt_obsh"></label>
         <input type="email" class="forms6" id="time6" placeholder="00:00">
     </div>
-        <div class="obem_sobr">
-            <label for="obem_sobr" class="txt_obsh">Объем собрания</label>
-            <input type="email" class="forms4" id="obem_sobr" placeholder="Выбрать количество">
-        </div>
+
 
     <p class="dan_org_sobr">Данные организатора собрания</p>
 
