--- a/src/main/resources/lichnui_kobinetu/lk_org/z_sobr/z_sobr_org_7.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/z_sobr/z_sobr_org_7.html
@@ -34,7 +34,7 @@
                 </ol>
             </nav>
         </div>
-        <p class="heading">Карточка собрания: 1014-очное</p>
+        <p class="heading">Карточка собрания: 1014-заочное</p>
 
         <div class="stats">
             <ul>
