--- a/src/main/resources/lichnui_kobinetu/lk_org/z_sobr/z_sobr_org_3.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/z_sobr/z_sobr_org_3.html
@@ -35,7 +35,7 @@
             </nav>
         </div>
 
-        <p class="heading">Карточка собрания: 1014-очное</p>
+        <p class="heading">Карточка собрания: 1014-заочное</p>
 
         <div class="stats">
             <ul>
